<resources>
    <string name="app_name">Friend Everywhere</string>
    <string name="title_activity_test">test</string>
    <string name="title_accept_friend">Lời mời kết bạn</string>
    <string name="title_country_list">Chọn quốc gia</string>
    <string name="title_new_message">Tin nhắn mới</string>
    <string name="title_activity_create_pass">Khởi tạo mật khẩu</string>
    <string name="description"></string>

    <!-- REGISTER -->
    <string name="title">SỐ ĐIỆN THOẠI</string>
    <string name="guima">GỬI MÃ</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="register_phone_empty">Số điện thoại không được bỏ trống</string>
    <string name="register_phone_format">Số điện thoại không hợp lệ</string>

    <!-- PIN CODE-->
    <string name="maxacnhan">NHẬP MÃ XÁC NHẬN</string>
    <string name="xacnhan">XÁC NHẬN</string>
    <string name="quaylai">QUAY LẠI</string>
    <string name="login_phone_empty">Số điện thoại không được bỏ trống</string>
    <string name="login_pass_empty">Mật không được bỏ trống</string>

    <!-- LOGIN-->
    <string name="sdt">Số điện thoại</string>
    <string name="pass">Mật khẩu</string>
    <string name="laylaitaikhoan">LẤY LẠI MẬT KHẨU</string>
    <string name="taikhoanmoi">TÀI KHOẢN MỚI</string>

    <!--AppIntro-->
    <string name="email">EMAIL</string>
    <string name="calender">CALENDAR</string>
    <string name="shopping">SHOPPING</string>
    <string name="social_network">SOCIAL NETWORK</string>

    <string name="email_hint">A system for sending and receiving messages electronically over a computer network.</string>
    <string name="calender_hint">Note all your special occasions in calendar and keep them in your finger tips</string>
    <string name="shopping_hint">Shop and get offers, promo codes and discounts on your future purchase.</string>
    <string name="social_network_hint">Stay connected with your friends, colleagues and family globally</string>
    <string name="skip">SKIP</string>
    <!--End - AppIntro-->

    <!-- ACCEPT FRIEND -->
    <string name="confirm">Đồng ý</string>
    <string name="delete">Hủy</string>

    <!--COUNTRY LIST -->
    <string name="menu_country_list_search">Tìm kiếm</string>

    <!-- DIALOG -->
    <string name="dialog_cancel">Đóng</string>

    <!-- SETTINGS -->
    <string name="accSettings">Thiết lập tài khoản</string>
    <string name="aboutUs">Giới thiệu ứng dụng</string>
    <string name="termsOfUse">Điều khoản sử dụng</string>
    <string name="feedback">Phản hồi</string>
    <string name="logOut">Đăng xuất</string>
    <string name="updateInfo">Chỉnh sửa thông tin</string>
    <string name="acceptFriend">Lời mời kết bạn</string>

    <!--MESSAGE ACTIVITY-->
    <string name="new_mess">Tin nhắn mới</string>

    <!--FEED BACK ACTIVITY-->
    <string name="feed_back_subject">Tiêu đề</string>
    <string name="feed_back_content">Nội dung</string>
    <string name="feed_back_err_null_subject">Tiêu đề không được để trống</string>
    <string name="feed_back_err_null_content">Nội dung không được để trống</string>

    <!--ABOUT US-->
    <string name="aboutus1">Xin chân thành cảm ơn sự hướng dẫn, ủng hộ và chỉ bảo của Tiến sĩ Đỗ Xuân Chợ cùng các thầy cô trong Khoa Công Nghệ Thông Tin đã tận tình giảng dạy, cung cấp các kiến thức cần thiết để tôi có thể vận dụng trong quá trình xây dựng ứng dụng.\n Ứng dụng Friend Everywhere sử dụng công nghệ OTT trên nền tảng hệ điều hành Android là sản phẩm tôi xây dựng và thiết kế dựa trên những kiến thức đã được học trên ghế nhà trường. Ứng dụng này được thực hiện không chỉ với mục đích tốt nghiệp mà em còn muốn sản phẩm này được sử dụng trong thực tế, giúp đỡ mọi người có cơ hội kết bạn và giao tiếp một cách nhanh chóng, tiện lợi.\nSo với các ứng dụng đã có trên thị trường hiện nay, ứng dụng của tôi khác với các ứng dụng khác như sau:\n-\tĐối với Viber, ứng dụng FE cho phép người dùng có thể tìm kiếm và kết bạn ở khu vực xung quanh theo yêu cầu như tuổi, giới tính, sở thích…\n-\tĐối với Zalo, ứng dụng FE cung cấp thêm bản đồ để người dùng có thể biết vị trí của người bạn của mình hiện tại ở đâu.\n"</string>

    <!--FRIEND INFO-->
    <string name="title_friend_profile">Thông tin</string>
    <string name="title_friend_request">Kết bạn</string>
    <string name="title_friend_call">Gọi điện</string>
    <string name="title_friend_message">Nhắn tin</string>
    <string name="title_friend_chat">Trò chuyện</string>

    <!-- TITILE MENU -->
    <string name="menu_edit">Cập nhật</string>
    <string name="menu_done">Lưu</string>
    <string name="menu_new_message">Gửi tin nhắn</string>

    <!-- NEW MESSAGE -->
    <string name="new_message_cancel">Hủy bỏ</string>
    <string name="new_message_ok">Đồng ý</string>
    <string name="new_message_hint">Nhập tên nhóm</string>
    <string name="new_message_error">Dữ liệu không được bỏ trống</string>
    <string name="new_message_null_friend">Chưa người bạn nào được chọn :(</string>

    <string name="title_activity_find_friend">Tìm bạn</string>

    <!-- FIND FRIEND -->
    <string name="search">Tìm kiếm</string>
    <string name="add_friend">Thêm bạn bằng số điện thoại</string>
    <string name="add_sdt">Nhập số điện thoại</string>

    <!-- INTERNET -->
    <string name="error_internet_lost">No internet connection</string>
    <string name="error_unknown_host">Cannot connect to server</string>
    <string name="error_internet_timeout">Time out! Cannot connect to server</string>
    <string name="error_network_general">Cannot connect to server right now. Please try later</string>
    <string name="error_io_exception">An error occurred! Please try again.</string>
    <string name="json_key_code">code</string>
    <string name="json_key_message">message</string>
    <string name="json_key_results">results</string>

    <!-- PROFILE -->
    <string name="about_me">Giới thiệu</string>
    <string name="birth_day">Ngày sinh</string>
    <string name="phone_number">Điện thoại</string>
    <string name="email_profile">Email</string>

    <!-- ACCOUNT SETTINGS -->
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="share_position">Chia sẻ vị trí</string>
    <string name="delete_account">Xóa tài khoản</string>

    <!-- CHANGE PASSWORD -->
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Nhập lại mật khẩu mới</string>

    <!-- CREATE PASSWORD-->
    <string name="create_pass_btn">Khởi tạo mật khẩu</string>

</resources>
