<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_avatarSetting"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ava"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="1px"
                app:riv_corner_radius="10dip"
                app:riv_mutate_background="true"
                app:riv_tile_mode="repeat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_SettingFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textAllCaps="true"
                    android:textColor="@color/footer_actived"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btn_UpdateInfo"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/updateInfo"
                    android:textAllCaps="false"
                    android:textColor="@color/grey50" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_acceptfriend_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/acceptfriend"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:text="@string/acceptFriend" />

        <Button
            android:id="@+id/btn_accountSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/settings"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:text="@string/accSettings"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:drawableLeft="@drawable/aboutus"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:text="@string/aboutUs" />

        <Button
            android:id="@+id/btn_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:drawableLeft="@drawable/terms"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:text="@string/termsOfUse" />

        <Button
            android:id="@+id/btn_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:drawableLeft="@drawable/feedback"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:text="@string/feedback" />

        <Button
            android:id="@+id/btn_Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:drawableLeft="@drawable/logout48"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:text="@string/logOut" />
    </LinearLayout>
</ScrollView>