<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fithou.friendeverywhere.activity.SettingAccountActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/tv_change_pass"
        android:text="@string/change_pass"
        android:layout_margin="10dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_change_pass"
        android:id="@+id/rl_share_location"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/tv_share_position"
            android:text="@string/share_position"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sw_share_location"
            android:layout_alignTop="@+id/tv_share_position"
            android:layout_alignRight="@+id/tv_share_position"
            android:layout_alignEnd="@+id/tv_share_position"
            android:checked="false"/>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/tv_delete_account"
        android:text="@string/delete_account"
        android:layout_below="@+id/rl_share_location"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>


</RelativeLayout>
