<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fithou.friendeverywhere.activity.ConfirmPinCodeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutPinCode"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:singleLine="true"
        android:text="@string/maxacnhan"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/abc_action_bar_content_inset_material" />

    <LinearLayout
        android:id="@+id/linearLayoutPinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tvPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/borderstyle2"
            android:singleLine="true"
            android:textColor="#ffffff" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnXacNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_style"
            android:text="@string/xacnhan"
            android:textColor="#ffffff" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvQuayLai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borderstyle2"
            android:text="@string/quaylai"
            android:textAlignment="center"
            android:textColor="#ffffff" />

    </LinearLayout>
</RelativeLayout>
