<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fithou.friendeverywhere.activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutLogin"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/tvMaQuocGia_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borderstyle2"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/edtSdt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="none"
            android:background="@drawable/borderstyle2"
            android:gravity="center"
            android:inputType="phone"
            android:linksClickable="false"
            android:singleLine="true"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white"
            android:hint="@string/sdt"
            android:drawableLeft="@drawable/ic_call_white_24dp"
            android:textColorHint="@color/white"/>

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/edtPasslogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="none"
            android:background="@drawable/borderstyle2"
            android:gravity="center"
            android:inputType="textPassword"
            android:linksClickable="false"
            android:singleLine="true"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white"
            android:hint="@string/pass"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:textColorHint="@color/white"/>

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnGuiMa_login"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border_style"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/abc_action_bar_content_inset_material" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/tvReturnPassLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borderstyle2"
            android:gravity="center"
            android:text="@string/laylaitaikhoan"
            android:textColor="@color/white" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/tvNewAcLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borderstyle2"
            android:gravity="center"
            android:text="@string/taikhoanmoi"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
